crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__declaration_local_initializer.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn work() {\n    let x ="
---
alder::syntax

  × I was expecting a value after `=` in this binding at the end of the file
   ╭─[/project/src/main.ald:2:12]
 1 │ fn work() {
 2 │     let x =
   ·     ┬
   ·     ╰── this binding starts here
   ╰────
