crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__declaration_parameter_separator.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn work(x y) {}"
---
alder::syntax

  × I was expecting `,` or `)` after this parameter
   ╭─[/project/src/main.ald:1:11]
 1 │ fn work(x y) {}
   ·        ┬  ┬
   ·        │  ╰── expected `,` or `)`
   ·        ╰── this `(` opens here
   ╰────
