crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__entry_module_close.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x = 1\n}"
---
alder::syntax

  × this input cannot start a module item
   ╭─[/project/src/main.ald:2:1]
 1 │ let x = 1
 2 │ }
   · ┬
   · ╰── expected a declaration or import
   ╰────
  help: module items start with keywords such as `fn`, `let`, `type`, or
        `import`
