crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__entry_pattern.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let + = 1
---
alder::syntax

  × I was expecting a pattern
   ╭─[/project/src/main.ald:1:5]
 1 │ let + = 1
   · ┬   ┬
   · │   ╰── expected a pattern here
   · ╰── this binding starts here
   ╰────
  help: a pattern can bind a name, destructure a value, or use `_` to ignore
        it
