crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__entry_type.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x: = 1"
---
alder::syntax

  × I was expecting a type
   ╭─[/project/src/main.ald:1:8]
 1 │ let x: = 1
   · ┬      ┬
   · │      ╰── expected a type here
   · ╰── this binding starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
